# SBA-Backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.services.yml  docker-compose.yml  mvnw.cmd  pom.xml
.github/workflows/: deploy.yml
nginx/: nginx.conf
rag/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
rag/scripts/: migrate_thumbnails.py
rag/src/: __init__.py  api.py  catalog_engine.py  config.py  ingestion.py  rag_engine.py  schemas.py  services.py  storage.py  tools.py
rag/tests/: test_api.py  test_chunker.py  test_ingestion.py  test_mongo_store.py  test_openai.py  test_openai_fake.py  test_parsers.py  test_qdrant_store.py
scratch/: sync_catalog.py
scripts/: seed-gift-wrap-images.ps1  seed-minio.ps1  set_minio_policy.py  verify-demo-seed.sql
scripts/migrations/: 20260715_guest_checkout.sql  20260716_sync_book_review_aggregates.sql  20260721_add_voucher_schema.sql
src/main/java/com/bookverse/: BookVerseApplication.java
src/main/java/com/bookverse/config/: AdminSeeder.java  BookverseAdminProperties.java  BookverseSecurityProperties.java  DotenvLoader.java  JpaAuditingConfig.java  MinioConfig.java  MinioProperties.java  ModelMapperConfig.java  (+9 more)
src/main/resources/: application-reset.yml  application-test.yml  application.yml
src/main/resources/db/migration/: V1__init_schema.sql  V2__seed_books.sql  V3__switch_payment_provider_to_vnpay.sql  V4__add_rag_columns.sql
src/main/resources/db/seed/: 01_users.sql  02_books.sql  03_orders.sql  04_reviews.sql  05_vouchers.sql  06_gift_wraps.sql
(+333 files in other folders)
