[project]
name = "books-rag"
version = "0.1.0"
description = "Local books RAG service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebooklib>=0.18",
    "fastapi>=0.115.0",
    "minio>=7.2.0",
    "pymupdf>=1.24.0",
    "pymongo>=4.10.0",
    "qdrant-client>=1.12.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
books-rag = "src.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
